--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.9.16",
     "gatsby-image": "^2.2.39",
@@ -14,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-google-spreadsheet": "^2.0.0",
@@ -23,6 +25,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie-consent": "^3.0.0",
     "react-dom": "^16.12.0",
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^5.2.1",
